# openit-app

./: .env.development.disabled  .env.development.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  IMPLEMENTATION_SUMMARY_V2.md  README.md  index.html  package-lock.json  package.json  test-config.example.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  landing.yml  release.yml
auto-dev/: 00-autodev-overview.md  01-brief.md  02-impl.plan.md  03-implementation.md  03-testing.md  04-PR.md  04-testing.md  05-impl-review.md  06-PR.md  release-runbook.md
auto-dev/demos/: intro.md
auto-dev/explorations/: 2026-04-27-ui-creative-directions.md
auto-dev/guides/: sync-engine.md  ticket-statuses.md
auto-dev/plans/: 2026-04-24-pin-5707-datastores-agents-filestores-plan.md  2026-04-24-pin-5707-openit-onboarding-and-shell-plan.md  2026-04-25-bidirectional-sync-plan.md  2026-04-25-pin-5707-claude-code-plugin-plan.md  2026-04-25-v1-five-core-it-tasks.md  2026-04-26-escalated-ticket-banner.md  2026-04-26-helpdesk-vision.md  2026-04-26-local-first-impl-plan.md  2026-04-26-local-first-merge-plan.md  2026-04-26-local-first-plan.md  2026-04-26-local-first-tracker.md  2026-04-26-skip-prepull-when-clean.md  2026-04-26-starter-case.md  2026-04-26-sync-resolve-conflict-script.md  2026-04-26-triage-agent-bootstrap.md  2026-04-26-workflow-capture-skill.md  2026-04-27-auto-triage-plan.md  2026-04-27-reports-plan.md  2026-04-27-skill-canvas-plan.md  2026-04-27-slack-channel-local-plan.md  2026-04-28-PIN-5775-v2-sync-local-as-source-of-truth.md  2026-04-28-cli-tools-catalog-plan.md  2026-04-28-mcp-tools-catalog-plan.md  2026-04-28-mcp-tools-catalog-spikes.md  2026-04-28-pin-5774-connect-to-cloud-auth.md  2026-04-28-ship-current-main-plan.md  2026-04-28-v2-sync-local-as-source-of-truth.md  2026-04-29-PIN-5775-architecture-fix-summary.md  2026-04-29-PIN-5775-phase1-filestore-local-first-plan-impl-review.md  2026-04-29-PIN-5775-phase1-filestore-local-first-plan.md  2026-04-29-PIN-5775-phase1-manual-testing-checklist.md  2026-04-29-PIN-5775-phase2-brief.md  2026-04-29-PIN-5775-phase2-kb-local-first-addendum.md  2026-04-29-PIN-5779-phase3-brief.md  2026-04-29-PIN-5779-phase3-datastore-plan.md  2026-04-29-PIN-TBD-phase3-brief.md  (+19 more)
integration_tests/: README.md  adapter-routing.test.ts  conversations-composite-key.test.ts  datastore-connect-matrix.test.ts  datastore-create-no-template.test.ts  datastore-import-csv.test.ts  datastore-sync.test.ts  filestore-sync.test.ts  kb-sync.test.ts  push-no-replication.test.ts  sync-engine-branches.test.ts  upload-request-contract.test.ts
integration_tests/utils/: auth.ts  (+3 more)
landing/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: build-slack-listener.mjs  cleanslate.mjs  cleanup-cloud.sh  cleanup-uuid-duplicates.mjs  clear-cloud-slate.mjs  devmode.mjs  generate-typescript-api.sh  pinkit-stub.sh  test-cloud-connect.mjs
src/: App.css  App.tsx  ChatPane.test.tsx  ChatPane.tsx  Onboarding.tsx  PinkfishOauthModal.tsx  SkillCanvas.css  SkillCanvas.tsx  SlackConnectModal.css  SlackConnectModal.tsx  Toast.css  Toast.tsx  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: README.md  dev-codesign.sh
src-tauri/src/: agent_trace.rs  claude.rs  cli.rs  cli_tools.rs  filestore.rs  fs_tree.rs  git_history.rs  git_ops.rs  intake.rs  kb.rs  keychain.rs  lib.rs  main.rs  oauth_callback.rs  openit_config.rs  pinkfish.rs  project.rs  pty.rs  reports.rs  scripts.rs  skill_canvas.rs  skills.rs  slack.rs  state.rs  tools.rs  tunnel.rs  watcher.rs
(+221 files in other folders)
