[package]
name = "openit-app"
version = "0.1.0"
description = "OpenIT — Tauri desktop wrapper for Claude Code"
authors = ["Pinkfish"]
edition = "2021"

[lib]
name = "openit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
anyhow = "1"
which = "6"
walkdir = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net"] }
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "form"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
tempfile = "3"
